bluec-tests/tests/invalid/types_void/initialized_void.c
extern void v = 0;

int main(void) { return 0; }